# pg_pfmon

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
pg_pfmon/: config.py  db.py  main.py  probes.py
tests/: localdb.py
