[tool.poetry]
name = "pg-pfmon"
version = "0.1.0"
description = ""
authors = ["Juraj Zachar <juraj.zachar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
asyncpg = "^0.30.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^6"
pytest = "^8.1.1"
coverage = "^7.4.4"
pytest-cov = "^4"
mockito = "^1.4"
testcontainers = {version=">=3.7", extras=["postgres"]}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
